Fix pre overflow to only show if needed

--- a/src/content.css
+++ b/src/content.css
@@ -21,7 +21,7 @@ pre {
  */
 pre {
   margin: 0;
-  overflow: scroll;
+  overflow: auto;
 }
 
 /**
